fix overflow

--- a/src/scss/bootstrap/_custom.scss
+++ b/src/scss/bootstrap/_custom.scss
@@ -6,6 +6,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 $black: #0b0b0b;
