--- a/src/scss/components/_Navbar.scss
+++ b/src/scss/components/_Navbar.scss
@@ -4,6 +4,7 @@
   position: absolute;
   z-index: 4;
   width: 100%;
+  height: 60px;
 
   .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
@@ -13,6 +14,9 @@
     cursor: pointer;
     white-space: nowrap;
     height: 60px;
+    padding: 0 12px;
+    display: block;
+
     a {
       display: flex;
       justify-content: center;
@@ -31,5 +35,15 @@
 
   @include media-breakpoint-up(lg) {
     background-color: transparent;
+
+    .menu {
+      flex-basis: 60%;
+    }
+  }
+
+  @include media-breakpoint-up(xxl) {
+    .menu {
+      flex-basis: 40%;
+    }
   }
 }
